--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     <title>Hello</title>
   </head>
   <body>
-    Hello World! Hello again! Hello a thirdtime
+    Hello World! Hello again! Hello a third time
+    This is just some added text
   </body>
 </html>
