Added an ordered list of fruits

--- a/hello.html
+++ b/hello.html
@@ -8,5 +8,12 @@
     Hello World! Hello again! Hello a third time
     This is just some added text
     <h2>This is some big text I added</h2>
+    <label for="list"><b>Here's a list of fruits</b></label>
+    <ol id="list">
+      <li>Mango</li>
+      <li>Banana</li>
+      <li>Orange</li>
+      <li>Apple</li>
+    </ol>
   </body>
 </html>
