Just made some minor changes

--- a/bootstraptest.html
+++ b/bootstraptest.html
@@ -8,6 +8,39 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
-    
+    <div class="container">
+      <div class="alert alert-primary m-4" role="alert">
+        Hey there! I'm an alert.
+      </div>
+      <div class="row">
+        <div class="col-lg-3 col-sm-6 p-4 m-2 bg-secondary text-light">
+          What's good peeps!
+        </div>
+        <div class="col-lg-3 col-sm-6 p-4 m-2 bg-secondary text-light">
+          What's good peeps!
+        </div>
+        <div class="col-lg-3 col-sm-6 p-4 m-2 bg-secondary text-light">
+          What's good peeps!
+        </div>
+        <div class="col-lg-3 col-sm-6 p-4 m-2 bg-secondary text-light">
+          What's good peeps!
+        </div>
+        <div class="col-lg-3 col-sm-6 p-4 m-2 bg-secondary text-light">
+          What's good peeps!
+        </div>
+        <div class="col-lg-3 col-sm-6 p-4 m-2 bg-secondary text-light">
+          What's good peeps!
+        </div>
+        <div class="col-lg-3 col-sm-6 p-4 m-2 bg-secondary text-light">
+          What's good peeps!
+        </div>
+        <div class="col-lg-3 col-sm-6 p-4 m-2 bg-secondary text-light">
+          What's good peeps!
+        </div>
+        <div class="col-lg-3 col-sm-6 p-4 m-2 bg-secondary text-light">
+          What's good peeps!
+        </div>
+      </div>
+    </div>
   </body>
 </html>
