Added testing.html, variables.css, and variables.scss

--- a/hello.html
+++ b/hello.html
@@ -5,34 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <style type="text/css">
-      .heading{
-        font-weight: 900;
-      }
-      ol li{
-      }
-      .container{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        color: white;
-        font-family: montserrat;
-        font-size: 13px;
-        font-weight: 900;
-      }
-      .container > div{
-        width: 200px;
-        text-align: center;
-        padding: 10px;
-        background: gray;
-        margin: 10px;
-        transition: 0.3s;
-        cursor: pointer;
-      }
-      .container > div:hover{
-        background: black;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     Hello World! Hello again! Hello a third time! <br>
